tests/error/ptr_assign_other.gw
class C { typedef void (test)(); }
class D { function void test(){} }
C c;
D d;
d.test @=> c.test;
